Fix closing heading tag

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <title>Incus Data's Github Site</title>
 </head>
 <body>
-   <h1>Incus Data's GitHub Site</title>
+   <h1>Incus Data's GitHub Site</h1>
 
-   <p>Welcome to our GitHub Pages site</p>
+   <p>Welcome to our GitHub Pages site.</p>
 </body>
 </html>
