--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
    <h1>Incus Data's GitHub Site</h1>
 
-   <p>Welcome to our GitHub Pages site.</p>
+   <p>Welcome to our GitHub Pages site. This is (on 2023-03-17), very
+   much a work in progress. Please bear with us.</p>
 </body>
 </html>
