Attempt to get favicon.ico showing

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="author" content="Codi Matters" />
   <meta name="dcterms.date" content="2023-03-16" />
-  <meta name="keywords" content="incusdata, incus, training" />
+  <meta name="keywords" content="incusdata, incus, training, github" />
+  <link rel="icon" href="https://incusdata.github.io/favicon.ico?v=2" />
   <title>Incus Data's Github Site</title>
 </head>
 <body>
