Second attempt to get favicon.ico to show

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Codi Matters" />
   <meta name="dcterms.date" content="2023-03-16" />
   <meta name="keywords" content="incusdata, incus, training, github" />
-  <link rel="icon" href="https://incusdata.github.io/favicon.ico?v=2" />
+  <link rel="shortcut icon" href="/favicon.ico?v=2" />
   <title>Incus Data's Github Site</title>
 </head>
 <body>
