Jacqui added something

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
 
    <p>Welcome to our GitHub Pages site. This is (on 2023-03-17), very
    much a work in progress. Please bear with us.</p>
+
+   <p>Jacqui has done something with it</p>
 </body>
 </html>
