Another attempt by JJC

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
    <p>Welcome to our GitHub Pages site. This is (on 2023-03-17), very
    much a work in progress. Please bear with us.</p>
 
-   <p>Jacqui has done something with it</p>
+   <p>Jacqui has tried again with cloning this time.</p>
 </body>
 </html>
